--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
+            "Application\\": "module/Application/src/",
+            "Admin\\": "module/Admin/src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "ApplicationTest\\": "module/Application/test/"
+            "ApplicationTest\\": "module/Application/test/",
+            "Admin\\": "module/Admin/test/"
         }
     },
     "extra": [],
